<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_search"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_home"
        android:iconTint="@color/white"
        android:title="@string/share"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_setting"
        android:iconTint="@color/white"
        android:title="@string/setting"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_favorite"
        android:iconTint="@color/white"
        android:title="@string/favorite"
        app:showAsAction="never" />

</menu>