...
            android:layout_marginTop="16dp"
            android:src="@drawable/alvaro_negredo_photostream"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/userDetailName"
            android:textColor="@color/colorDetail"
...
